--- a/work.html
+++ b/work.html
@@ -35,22 +35,31 @@
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1>Hi I am Patricia Pereira</h1>
-            <h2 class="mt-5">Frontend developer, based in Portugal</h2>
-            <p class="mt-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="" class="btn btn-branding">View all projects</a>
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            <img src="images/yogurt.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Yogurt Project</h3>
+            <p class="text-center text-muted">Built wth HTML and CSS</p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/portrait.png" alt="Patricia" class="img-fluid" />
+          <div class="col-md-6 mb-5">
+            <img src="images/weather.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Weather App</h3>
+            <p class="text-center text-muted">
+              Built wth HTML, CSS and JavaScript
+            </p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img src="images/dictionary.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Dictionary App</h3>
+            <p class="text-center text-muted">Built wth HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img src="images/translation.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Translation App</h3>
+            <p class="text-center text-muted">Built wth HTML, CSS and React</p>
+          </div>
         </div>
       </div>
     </div>
