--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,42 @@
       rel="stylesheet"
     />
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/fa4b26d162.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Patricia Logo."
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Patricia Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Patricia">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Patricia's Work">Work</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html" title="Contact Patricia">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
@@ -55,5 +86,62 @@
         </p>
       </div>
     </div>
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding"
+            title="Contact Patricia"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:patricia@gmail.com"
+          class="email-link"
+          title="Email Patricia"
+          >patricia@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://www.instagram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.github.com/patricia"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <p class="text-center">
+        This project was coded by SheCodes, and it is
+        <a
+          href="https://github.com/aigib/portfolio-project-again"
+          target="_blank"
+        >
+          open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
