--- a/work.html
+++ b/work.html
@@ -29,39 +29,143 @@
       rel="stylesheet"
     />
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/fa4b26d162.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Patricia Logo."
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Patricia Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Patricia">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Patricia's Work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Patricia">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-5">
-            <img src="images/yogurt.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/yogurt.png"
+              class="img-fluid rounded"
+              alt="Yogurt project preview"
+            />
             <h3 class="text-center">Yogurt Project</h3>
             <p class="text-center text-muted">Built wth HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="images/weather.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/weather.png"
+              class="img-fluid rounded"
+              alt="Weather app preview"
+            />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">
               Built wth HTML, CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="images/dictionary.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/dictionary.png"
+              class="img-fluid rounded"
+              alt="Dictionary app preview"
+            />
             <h3 class="text-center">Dictionary App</h3>
             <p class="text-center text-muted">Built wth HTML, CSS and React</p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="images/translation.png" class="img-fluid" alt="" />
+            <img
+              src="images/translation.png"
+              class="img-fluid"
+              alt="Translation app preview"
+            />
             <h3 class="text-center">Translation App</h3>
             <p class="text-center text-muted">Built wth HTML, CSS and React</p>
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding"
+            title="Contact Patricia"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:patricia@gmail.com"
+          class="email-link"
+          title="Email Patricia"
+          >patricia@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://www.instagram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.github.com/patricia"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <p class="text-center">
+        This project was coded by SheCodes, and it is
+        <a
+          href="https://github.com/aigib/portfolio-project-again"
+          target="_blank"
+        >
+          open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
